# rustlex

./: Cargo.toml
codegen/: Cargo.toml
codegen/src/: parser.rs
codegen/tests/: build.rs
src/: lib.rs
