[package]
name = "rumblebars-rustlex"
version = "0.3.2"
authors = ["Leo Testard <leo.testard@gmail.com>", "Mathieu Poumeyrol <kali@zoy.org>"]
description = "Lexical analysers generator for Rust, written in Rust (crate dedicated to rumblebars, divergences written by Nicolas Cherel)"
homepage = "https://github.com/nicolas-cherel/rustlex"
repository = "https://github.com/nicolas-cherel/rustlex"
readme = "README.md"
keywords = [ "lexer", "lexical", "analyser", "generator" ]
license = "MIT"

[lib]
name = "rustlex"
crate-type = ["dylib"]

[dependencies]
rumblebars-rustlex_codegen = { version = "*", path = "codegen" }
