[package]
name = "rumblebars-rustlex_codegen"
version = "0.3.1"
authors = ["Leo Testard <leo.testard@gmail.com>"]
description = "Syntex extension for RustLex"
homepage = "https://crates.io/crates/rumblebars-rustlex"
repository = "https://crates.io/crates/rumblebars-rustlex"
keywords = [ "lexer", "lexical", "analyser", "generator" ]
license = "MIT"
build = "build.rs"

[lib]
name = "rustlex_codegen"

[features]
with-syntex = ["quasi/with-syntex", "quasi_codegen/with-syntex", "syntex", "syntex_syntax"]

[build-dependencies]
quasi_codegen = { version = "*", optional = true }
syntex        = { version = "*", optional = true }

[dependencies]
log = "*"
quasi         = { version = "*", optional = true }
syntex        = { version = "*", optional = true }
syntex_syntax = { version = "*", optional = true }
